--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,13 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+APP_TITLE=EasySked
+APP_TIMEZONE="Asia/Muscat"
+
+GOOGLE_CLIENT_ID="YOUR GOOGLE CLIENT ID"
+GOOGLE_CLIENT_SECRET="YOUR GOOGLE CLIENT SECRET"
+GOOGLE_REDIRECT_URL="http://easysked.dev/google_login"
+GOOGLE_SCOPES="email,profile,https://www.googleapis.com/auth/calendar"
+GOOGLE_APPROVAL_PROMPT="force"
+GOOGLE_ACCESS_TYPE="offline"
