--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "fullcalendar": "^3.3.0"
   }
 }
